# scf_pb

./: .gitignore  .gitmodules  CMakeLists.txt  MANIFEST.IN  optional-requirements.txt  pyproject.toml  readme.md  requirements.txt  setup.py
extra/: symbolic.py
scf_pb/: __init__.py  __vectorization.py  __wrap_pybind.py  __wrapped.py
scf_pb/src/: brush.hpp  energy.hpp  normalization_condition.hpp  particles.hpp  phi.hpp  profiles.hpp  pybind.cpp  ss_scf_common.hpp  test_01.cpp  test_02.cpp  test_D_eff.cpp  test_pore_brush.cpp
scf_pb/src/test_cpp/: test_D_eff.cpp
src/: brush_profiles.cpp  brush_profiles.hpp  energy.hpp  inserted_particle.hpp  normalization_condition.hpp  particle_energy.hpp  particle_energy.tpp  particle_geometry.hpp  particles.hpp  profiles.hpp  pybind.cpp  ss_scf_common.hpp  topology.hpp  vectorization.hpp
src/test_cpp/: test_01.cpp  test_D_eff.cpp  test_inserted_particle.cpp  test_particle.cpp  test_pore_brush.cpp  test_vectorization.cpp
test_python/: brush_profiles.py  diffusion.py  interactive.py  test.py
